--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.14",
     "@mui/x-data-grid": "^7.3.0",
     "@mui/x-date-pickers": "^7.10.0",
+    "axios": "^1.7.2",
     "dayjs": "^1.11.11",
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
